  is enabled, and if it does in fact find any problems, the compiler will
  report them, and if they are severe enough, it will not generate the
  interface file at all. In the usual use case where the compiler is asked
  to generate the interface file as part of rebuilding the whole executable,
  this behavior has the advantage that the rebuild, which would fail anyway,
  fails sooner.

Changes to the Mercury implementation
-------------------------------------

* Grades that support trailing now always use trail segments; it is no longer
  possible to use a fixed size trail.

  One consequence of this is that the `trseg` grade component now acts
  as a synonym for the `tr` component. Since `tr` is shorter, `trseg`
  is deprecated in its favor.

  Another consequence is that the `--trail-size` and `--trail-size-kwords`
  runtime options no longer have any effect, and are deprecated.

* We have upgraded the bundled Boehm GC to v7.6.12 and libatomic_ops to v7.6.8.

NEWS for Mercury 20.01.2
========================

This is a bug-fix release.

* We have a fixed bug that prevented the runtime from building correctly
  in C grades on 32-bit platforms when *not* using GCC as the C compiler.

* [Mantis bug #461]. We have fixed an assertion failure affecting programs
  in low-level C parallel grades as they exit.

NEWS for Mercury 20.01.1
========================

This is a bug-fix release.

* We have added a new option `--warn-suspicious-recursion` that asks the
  compiler to warn about recursive calls which are likely to have problems,
  such as leading to infinite recursion. (This feature was present in the
  20.01 release but not announced.)

* We now allow combined higher-order types and insts as direct arguments of
  functors in discriminated unions, as in the following type:

        :- type job
            --->    job(pred(int::out, io::di, io::uo) is det).

  For any construction unification using this functor the argument must have